# nau

./: .gitignore  CMakeLists.txt  README.md
include/: shader.hpp  sphere.hpp
shaders/: sphere.frag  sphere.vert
src/: main.cpp  shader.cpp
